# pdfTranslator

./: .gitignore  README.md  for_translation.txt  main.py  pyproject.toml  requirements.txt
pdf_layout/: __init__.py  extractor.py  prompt_template.txt  rebuilder.py  rebuilder_fpdf2.py  rebuilder_unicode.py  segmenter.py  source_detector.py  translation_io.py
pdf_layout/pipelines/: __init__.py  base.py  direct_pdf.py  docx_roundtrip.py  html_intermediate.py  office_cat.py  office_roundtrip.py  office_xml.py  pikepdf_lowlevel.py  xliff_format.py
tests/: test_roundtrip.py
utils/: __init__.py  font_utils.py
