[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-layout-engine"
version = "1.0.0"
description = "Deterministic PDF layout-preserving segmentation and reinsertion engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "PDF Layout Engine Team"}
]
keywords = ["pdf", "layout", "extraction", "translation", "pymupdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "pymupdf>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
office = [
    "pdf2docx>=0.5.0",
    "python-pptx>=0.6.21",
    "openpyxl>=3.1.0",
]
xliff = [
    "translate-toolkit>=3.10.0",
]
pikepdf = [
    "pikepdf>=8.0.0",
]
html = [
    "weasyprint>=60.0",
]
all = [
    "pdf2docx>=0.5.0",
    "python-pptx>=0.6.21",
    "openpyxl>=3.1.0",
    "translate-toolkit>=3.10.0",
    "pikepdf>=8.0.0",
]

[project.scripts]
pdf-layout = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["pdf_layout", "utils"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
